# ComfyUI_Gear

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
gear/: __init__.py  aces_mats.py  acescct.py  exr_io.py  grading.py  logc3.py  logc4.py
nodes/: __init__.py  acescct_decode.py  acescct_encode.py  color_grade.py  load_exr.py  logc3_decode.py  logc4_decode.py
scripts/: sync_from_exr_viewer.py
web/: gear_grade.js
